# advanced-ai-agent

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  config.py  db.py  main.py  nx.json  package-lock.json  package.json  pyproject.toml  requirements.txt
apps/backend/: .env.example  build_join_graph.py  check_all_collection.py  check_collections.py  init_db.py  join_graph.json  main.py  populate_vector_store.py  project.json  pyproject.toml  requirements.txt  run_api.py  test_internal_api.py  test_phase2_sql_agent.py  test_phase4_orchestrator.py
artifacts/: associations.json  display_attributes_registry.json  domain_registry.json  join_graph_manual.json  join_graph_merged.json  join_graph_raw.json  join_graph_validated.json
data/: smart-reports.json
data/manual/: core.md  customers.md  work-orders.md
docs/: ARCHITECTURE.md  AUDIT_COLUMN_FILTERING.md  DISPLAY_ATTRIBUTES_TROUBLESHOOTING.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_GUIDE.md  INTERNAL_API_REFACTOR.md  PHASE1_COMPLETE.md  PHASE3_PLAN.md  PHASE3_PROGRESS.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE5_PLAN.md  PROJECT_PLAN.md  README.md  REASONING_VS_FINAL_ANSWER.md  REFERENCE.md  V2_IMPROVEMENTS_SUMMARY.md  openapi.json
docs/specialized/: AUDIT_COLUMN_FILTERING.md  BFF_MARKDOWN_CONVERSION.md  DOMAIN_ONTOLOGY.md  (+22 more)
scripts/: build_join_graph.py  build_join_graph_paths.py  check_vector_store.py  demo_orchestrator.py  fix_empty_rag.sh  merge_join_graph.py  populate_vector_store.py  reset_and_populate_rag.sh  run-dev.py  run-prod.py  run_tests.sh  setup.sh  start-ollama.sh  test_secure_views.py  validate_join_graph_llm.py
tests/: debug_chunking.py  debug_rag_retrieval.py  test_classification.py  test_correction_prompt.py  test_correction_standalone.py  test_display_attributes.py  test_domain_context_formatting.py  test_domain_e2e.py  test_domain_ontology.py  test_domain_registry_patterns.py  test_domain_validation.py  test_followup_memory.py  test_prompt_helpers.py  test_prompt_helpers_standalone.py  test_sql_correction_structured.py
(+137 files in other folders)
